--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -77,6 +77,7 @@ init_diagram: |
   "beets:nightly" <- Base Images
 # changelog
 changelogs:
+  - {date: "01.02.26:", desc: "Rebase to Alpine 3.23."}
   - {date: "27.01.25:", desc: "Rebase to Alpine 3.21, unpin beetcamp."}
   - {date: "22.10.24:", desc: "Pin beetcamp to 0.19.2 until upstream requirements fixed."}
   - {date: "01.10.24:", desc: "Add packages required for Discogs plugin."}
