--- a/root/defaults/config.yaml
+++ b/root/defaults/config.yaml
@@ -12,13 +12,13 @@ convert:
     opts: -ab 320k -ac 2 -ar 48000
     max_bitrate: 320
     threads: 1
-    
+
 paths:
     default: $albumartist/$album%aunique{}/$track - $title
     singleton: Non-Album/$artist - $title
     comp: Compilations/$album%aunique{}/$track - $title
-    albumtype_soundtrack: Soundtracks/$album/$track $title 
-        
+    albumtype_soundtrack: Soundtracks/$album/$track $title
+
 import:
     write: yes
     copy: yes
@@ -38,9 +38,10 @@ embedart:
 
 fetchart:
     auto: yes
-    
+
 replaygain:
     auto: no
+    command: mp3gain
 
 scrub:
     auto: yes
