--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.21
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.23
 
 # set version label
 ARG BUILD_DATE
@@ -21,6 +21,7 @@ RUN \
     git \
     gobject-introspection-dev \
     jpeg-dev \
+    libedit-dev
     libpng-dev \
     mpg123-dev \
     openjpeg-dev \
