--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -42,6 +42,7 @@ RUN \
     lame \
     libffi \
     libpng \
+    mp3gain \
     mpg123 \
     nano \
     openjpeg \
@@ -54,17 +55,6 @@ RUN \
   git clone https://github.com/beetbox/beets.git /tmp/beets && \
   cd /tmp/beets && \
   git checkout -f "v${BEETS_VERSION}" && \
-  echo "**** compile mp3gain ****" && \
-  mkdir -p \
-    /tmp/mp3gain-src && \
-  curl -o \
-    /tmp/mp3gain-src/mp3gain.zip -sL \
-    https://sourceforge.net/projects/mp3gain/files/mp3gain/1.6.2/mp3gain-1_6_2-src.zip && \
-  cd /tmp/mp3gain-src && \
-  unzip -qq /tmp/mp3gain-src/mp3gain.zip && \
-  sed -i "s#/usr/local/bin#/usr/bin#g" /tmp/mp3gain-src/Makefile && \
-  make && \
-  make install && \
   echo "**** compile mp3val ****" && \
   mkdir -p \
     /tmp/mp3val-src && \
