Add flask-cors per #135

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -69,8 +69,7 @@ RUN \
   python3 -m venv /lsiopy && \
   pip install -U --no-cache-dir \
     pip \
-    setuptools \
-    wheel && \
+    setuptools && \
   echo "**** install beets ****" && \
   cd /tmp/beets && \
   pip install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.23/ . && \
@@ -81,6 +80,7 @@ RUN \
     beetcamp \
     python3-discogs-client \
     flask \
+    flask-cors \
     PyGObject \
     pyacoustid \
     pylast \
